Match History works once. 2nd run will return duplicate DB objects. This is likely due to not checking if an object (summoner probably) is cached before creating a new summoner object. Also, unicode bullshit when summoner's have non-ascii characters in their name.

--- a/api/templates/match_history.html
+++ b/api/templates/match_history.html
@@ -9,7 +9,7 @@
 Data for Summoner: {{summoner}}<br><br>
 
 {% for g in games %}
-    <h2>Game {{forloop.counter0}}</h2>
+    <h2>Game {{forloop.counter0|add:"1"}}</h2>
     <h3>Participants</h3>
     {{g}}<br>
     {% for p in g.player_set.all %}
