Using `inflection` lib to convert DTO fields in RawStats to underscored model field names and set the values of all returned stats in the model obj. Previously only saved a few guaranteed stats.

--- a/api/templates/async_summoner_info.html
+++ b/api/templates/async_summoner_info.html
@@ -12,8 +12,8 @@
 
         <div id="summoner">
             <ul id="summoner_properties">
-                <li id="summoner_id">Test ID</li>
-                <li id="name">Test Name</li>
+                <li id="summoner_id"></li>
+                <li id="name"></li>
                 <li id="profile_icon_id"></li>
                 <li id="revision_date"></li>
                 <li id="summoner_level"></li>
