Discovered concurrency problem(s). Ex. 2 requests are simultaneously sent for different summoners' match history, where fellowPlayers overlap. This causes duplicate Summoner objects to be created in DB b/c the checks for them being cached occur before either request has completed. Probably a lot more situations like this. Proposed solution is to switch to robust non-sqlite DB (postgres?) and use "unique_together" to emulate functionality of a compound (composite?) key in DB and rely on that to prevent duplicate entries.

--- a/api/templates/summoner_info.html
+++ b/api/templates/summoner_info.html
@@ -5,11 +5,12 @@
 </head>
 <body>
 <h1>Summoner Info</h1>
-ID: {{summoner.summoner_id}}<br>
-Name: {{summoner.name}}<br>
-Profile Icon: {{summoner.profile_icon_id}}<br>
-Revision Date: {{summoner.revision_date}}<br>
-Region: {{summoner.region}}<br>
-Last Updated: {{summoner.last_update}}<br>
+ID: {{ summoner.summoner_id }}<br>
+Name: {{ summoner.name }}<br>
+Level: {{ summoner.summoner_level }}<br>
+Profile Icon: {{ summoner.profile_icon_id }}<br>
+Revision Date: {{ summoner.revision_date }}<br>
+Region: {{ summoner.region }}<br>
+Last Updated: {{ summoner.last_update }}<br>
 </body>
 </html>
