Conversion of epoch timestamp to date-time for match history.

--- a/api/templates/match_history.html
+++ b/api/templates/match_history.html
@@ -18,7 +18,7 @@ Data for Summoner: {{summoner}}<br><br>
 
     <h3>Meta Stats</h3>
 
-    Create date: {{g.create_date}}<br>
+    Create date: {{g.create_date_str}} (GMT)<br>
     Game ID: {{g.game_id}}<br>
     Game Mode: {{g.game_mode}}<br>
     Game Type: {{g.game_type}}<br>
