Forgot to change an ID ref in the page. Also, Riot-Watcher only working for NA. Should be an easy fix -- now requires changing domain to send requests depending on region.

--- a/lol_stats/templates/summoner/summoner_base.html
+++ b/lol_stats/templates/summoner/summoner_base.html
@@ -55,8 +55,8 @@
             $.ajax({
                 url: "{% url 'ajax_query_start' %}",
                 type: "POST",
-                data: { region: $("#region").val(),
-                        name: $("#name").val() },
+                data: { region: $("#query-region").val(),
+                        name: $("#query-name").val() },
                 success: function(data) {
                     task_id = data;
                     console.log(task_id);
